# pong

./: .gitignore  CMakeLists.txt  README.md  build_and_deploy.py  deploy.bat  deploy.sh
cmake/: version.h.in
include/: pong.h
resources/sounds/: README.md
source/: main.c  pong.c
